--- a/requirements/project/templates/register.html
+++ b/requirements/project/templates/register.html
@@ -23,20 +23,16 @@
         <h1>Register</h1>
         <form action="/register" method="POST">
             <div>
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username"  maxlength="50" required>
+                <input type="text" id="username" name="username"  maxlength="50" placeholder="User Name" required>
             </div>
             <div>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email"  maxlength="50" required>
+                <input type="email" id="email" name="email"  maxlength="50" placeholder="Email" required>
             </div>
             <div>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password"  maxlength="50"  required>
+                <input type="password" id="password" name="password"  maxlength="50" placeholder="Password"  required>
             </div>
             <div>
-                <label for="confirm_password">Confirm Password:</label>
-                <input type="password" id="confirm_password" name="confirm_password"  maxlength="50" required>
+                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password"  maxlength="50" required>
             </div>
             <button type="submit">Register</button>
         </form>
