--- a/requirements/project/templates/login.html
+++ b/requirements/project/templates/login.html
@@ -7,33 +7,34 @@
     <link rel="stylesheet" href="/static/css/form.css">
     <title>Forum</title>
 </head>
+
 <body>
-        <header class="nav">
+    <header class="nav">
         <div id="project_header">
             <h1><a href="/">FORUM</a></h1>
         </div>
     </header>
 
-    {{if .Error}}
-        <div class="error-container">
-            {{.Message}}
-        </div>
+        {{if .Error}}
+    <div class="error-container">
+        {{.Message}}
+    </div>
     {{end}}
+
     <div class="form-container">
         <h1>Login</h1>
         <form action="/login" method="POST">
             <div>
-                <label for="username">Username or Email:</label>
-                <input type="text" id="username" name="username"  maxlength="50" required>
+                <input type="text" id="username" name="username" maxlength="50" placeholder="Username or Email" required>
             </div>
             <div>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" maxlength="50" required>
+                <input type="password" id="password" name="password" maxlength="50" placeholder="Password" required>
             </div>
             <button type="submit">Login</button>
         </form>
         <p>Don't have an account? <a href="/register">Register here</a>.</p>
     </div>
-</body>
-</html>
 
+</body>
+
+</html>
