--- a/requirements/project/templates/post_component.html
+++ b/requirements/project/templates/post_component.html
@@ -12,41 +12,58 @@
 
   <footer>
     <div id="likes_dislikes">
+      {{if .IsLikedByUser}}
+      <form action="/like" method="POST" class="form_for_liked">
+        <input type="hidden" name="post_id" value="{{.Id}}">
+        <button type="submit">👍{{.Likes}}</button>
+      </form>
+      {{else}}
       <form action="/like" method="POST">
         <input type="hidden" name="post_id" value="{{.Id}}">
         <button type="submit">👍{{.Likes}}</button>
       </form>
-      
-      <form action="/dislike" method="POST">
+      {{end}}
+      {{if .IsDislikedByUser}}
+      <form action="/dislike" method="POST" class="form_for_disliked">
         <input type="hidden" name="post_id" value="{{.Id}}">
         <button type="submit">👎{{.Dislikes}}</button>
       </form>
     </div>
-    <form id="form_comment" action="/comment" method="POST">
-          <input type="hidden" name="post_id" value="{{.Id}}">
-          <input type="text" id="comment" name="comment" placeholder="comment..."  maxlength="500" required>
-      <button type="submit">comment</button>
+    {{else}}
+    <form action="/dislike" method="POST">
+      <input type="hidden" name="post_id" value="{{.Id}}">
+      <button type="submit">👎{{.Dislikes}}</button>
     </form>
+</div>
+{{end}}
 
-    {{if .Comments}}
-      <ul>
-        {{range .Comments}}
-          {{range $author, $comment := .}}
-            <li><strong>{{$author}}:</strong> {{$comment}}</li>
-         {{end}}
-        {{end}}
-      </ul>
-    {{else}}
-      <p>No comments yet.</p>
-    {{end}}
-    {{if not .IsEdited}}
-      <p><time datetime="{{.Created_at}}">Created: {{.Created_at}}</time></p>
-    {{else}}
-      <p>
-        <time datetime="{{.Created_at}}">Created: {{.Created_at}}</time> |
-        <time datetime="{{.Updated_at}}">Updated: {{.Updated_at}}</time>
-      </p>
-    {{end}}
-  </footer>
+
+
+<form id="form_comment" action="/comment" method="POST">
+  <input type="hidden" name="post_id" value="{{.Id}}">
+  <textarea id="comment" name="comment" placeholder="comment..." maxlength="500" required></textarea>
+  <button type="submit">comment</button>
+</form>
+
+{{if .Comments}}
+<ul>
+  {{range .Comments}}
+  {{range $author, $comment := .}}
+  <li><strong>{{$author}}:</strong> {{$comment}}</li>
+  {{end}}
+  {{end}}
+</ul>
+{{else}}
+<p>No comments yet.</p>
+{{end}}
+{{if not .IsEdited}}
+<p><time datetime="{{.Created_at}}">Created: {{.Created_at}}</time></p>
+{{else}}
+<p>
+  <time datetime="{{.Created_at}}">Created: {{.Created_at}}</time> |
+  <time datetime="{{.Updated_at}}">Updated: {{.Updated_at}}</time>
+</p>
+{{end}}
+</footer>
 </div>
 {{end}}
