--- a/requirements/project/templates/index.html
+++ b/requirements/project/templates/index.html
@@ -54,13 +54,13 @@
 
     <div class="pagination">
         {{if .HasPrev}}
-        <a href="{{.PrevPage}}">◀◀</a>
+        <a href="{{.PrevPage}}">◀</a>
         {{end}}
         {{if .PrintCurrentPage}}
         Page {{.CurrentPage}}
         {{end}}
         {{if .HasNext}}
-        <a href="{{.NextPage}}">▶▶</a>
+        <a href="{{.NextPage}}">▶</a>
         {{end}}
     </div>
 
