--- a/requirements/project/templates/update.html
+++ b/requirements/project/templates/update.html
@@ -29,10 +29,8 @@
     {{if .username}}
     <div class="form-container">
         <form class="" action="/profile/update/username/save" method="post">
-            <label for="username">Please type your New Username :</label><br>
-            <input type="text" id="username" name="username" required><br>
-            <label for="current">Please type your Password :</label><br>
-            <input type="password" id="current" name="current" required><br>
+            <input type="text" id="username" name="username" placeholder="Please type your New Username" required><br>
+            <input type="password" id="current" name="current" placeholder="Please type your Password" required><br>
             <button type="submit">Save</button>
         </form>
     </div>
@@ -40,10 +38,8 @@
     {{if .email}}
     <div class="form-container">
         <form action="/profile/update/email/save" method="post">
-            <label for="email">Please type your New Email :</label><br>
-            <input type="text" id="email" name="email" required><br>
-            <label for="current">Please type your Password :</label><br>
-            <input type="password" id="current" name="current" required><br>
+            <input type="text" id="email" name="email" placeholder="Please type your New Email " required><br>
+            <input type="password" id="current" name="current" placeholder="Please type your Password" required><br>
             <button type="submit">Save</button>
         </form>
     </div>
@@ -51,12 +47,9 @@
     {{if .password}}
     <div class="form-container">
         <form action="/profile/update/password/save" method="post">
-            <label for="current">Please type your Current Password :</label><br>
-            <input type="password" id="current" name="current" required><br>
-            <label for="new">Please type your New Password :</label><br>
-            <input type="password" id="new" name="new" required><br>
-            <label for="confirm">Please Confirm your New Password :</label><br>
-            <input type="password" id="confirm" name="confirm" required><br>
+            <input type="password" id="current" name="current" placeholder="Please type your Current Password" required><br>
+            <input type="password" id="new" name="new" placeholder="Please type your New Password" required><br>
+            <input type="password" id="confirm" name="confirm" placeholder="Please Confirm your New Password" required><br>
             <button type="submit">Save</button>
         </form>
     </div>
@@ -65,11 +58,6 @@
     <footer>
         <div class="footer-container">
             <p>&copy; 2025 FORUM — Built with ❤️ by the Forum Team</p>
-            <nav class="footer-links">
-                <!-- <a href="/about">About</a>
-                <a href="/contact">Contact</a>
-                <a href="/terms">Terms</a> -->
-            </nav>
         </div>
     </footer>
 </body>
