--- a/requirements/project/templates/login.html
+++ b/requirements/project/templates/login.html
@@ -25,10 +25,10 @@
         <h1>Login</h1>
         <form action="/login" method="POST">
             <div>
-                <input type="text" id="username" name="username" maxlength="50" placeholder="Username or Email" required>
+                <input type="text" id="username" name="username" minlength="6" maxlength="254" placeholder="Username or Email" required>
             </div>
             <div>
-                <input type="password" id="password" name="password" maxlength="50" placeholder="Password" required>
+                <input type="password" id="password" name="password" minlength="8" maxlength="72" placeholder="Password" required>
             </div>
             <button type="submit">Login</button>
         </form>
