--- a/requirements/project/templates/register.html
+++ b/requirements/project/templates/register.html
@@ -23,16 +23,16 @@
         <h1>Register</h1>
         <form action="/register" method="POST">
             <div>
-                <input type="text" id="username" name="username"  maxlength="50" placeholder="User Name" required>
+                <input type="text" id="username" name="username" minlength="3"  maxlength="32" placeholder="User Name" required>
             </div>
             <div>
-                <input type="email" id="email" name="email"  maxlength="50" placeholder="Email" required>
+                <input type="email" id="email" name="email" minlength="6"  maxlength="254" placeholder="Email" required>
             </div>
             <div>
-                <input type="password" id="password" name="password"  maxlength="50" placeholder="Password"  required>
+                <input type="password" id="password" name="password"  maxlength="8" minlength="72" placeholder="Password"  required>
             </div>
             <div>
-                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password"  maxlength="50" required>
+                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password" minlength="8" maxlength="72" required>
             </div>
             <button type="submit">Register</button>
         </form>
