--- a/requirements/project/static/css/post.css
+++ b/requirements/project/static/css/post.css
@@ -17,6 +17,7 @@ body {
     align-items: center;
     min-height: 100vh;
     line-height: 1.6;
+    overflow-x: hidden;
 }
 
 
@@ -39,7 +40,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: sticky;
     top: 0;
     z-index: 1000;
 }
@@ -257,6 +257,18 @@ button[type="submit"]:active {
 .form-container a:hover {
     color: #f69500;
     text-decoration: underline;
+}
+
+footer {
+    bottom: 0;
+    border-top: 1px solid rgba(255, 255, 255, 0.08);
+    width: 100vw;
+    height: 10vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2vmin;
 }
 
 
