--- a/requirements/project/templates/login.html
+++ b/requirements/project/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/form.css">
+    <link rel="stylesheet" href="/static/css/authentification.css">
     <title>Forum</title>
 </head>
 
@@ -24,12 +24,12 @@
     <div class="form-container">
         <h1>Login</h1>
         <form action="/login" method="POST">
-            <div>
-                <input type="text" id="username" name="username" maxlength="50" placeholder="Username or Email" required>
-            </div>
-            <div>
-                <input type="password" id="password" name="password" maxlength="50" placeholder="Password" required>
-            </div>
+            <!-- <div> -->
+                <input type="text" id="username" name="username" minlength="6" maxlength="254" placeholder="Username or Email" required>
+            <!-- </div>
+            <div> -->
+                <input type="password" id="password" name="password" minlength="6" maxlength="72" placeholder="Password" required>
+            <!-- </div> -->
             <button type="submit">Login</button>
         </form>
         <p>Don't have an account? <a href="/register">Register here</a>.</p>
