--- a/requirements/project/templates/update.html
+++ b/requirements/project/templates/update.html
@@ -27,16 +27,16 @@
     </div>
     {{end}}
     {{if .username}}
-    <div class="form-container">
+    <!-- <div class="form-container"> -->
         <form class="" action="/profile/update/username/save" method="post">
             <input type="text" id="username" name="username" placeholder="Please type your New Username" required><br>
             <input type="password" id="current" name="current" placeholder="Please type your Password" required><br>
             <button type="submit">Save</button>
         </form>
-    </div>
+    <!-- </div> -->
     {{end}}
     {{if .email}}
-    <div class="form-container">
+    <!-- <div class="form-container"> -->
         <form action="/profile/update/email/save" method="post">
             <input type="text" id="email" name="email" placeholder="Please type your New Email " required><br>
             <input type="password" id="current" name="current" placeholder="Please type your Password" required><br>
@@ -45,14 +45,14 @@
     </div>
     {{end}}
     {{if .password}}
-    <div class="form-container">
+    <!-- <div class="form-container"> -->
         <form action="/profile/update/password/save" method="post">
             <input type="password" id="current" name="current" placeholder="Please type your Current Password" required><br>
             <input type="password" id="new" name="new" placeholder="Please type your New Password" required><br>
             <input type="password" id="confirm" name="confirm" placeholder="Please Confirm your New Password" required><br>
             <button type="submit">Save</button>
         </form>
-    </div>
+    <!-- </div> -->
     {{end}}
 
     <footer>
