--- a/requirements/project/static/css/authentification.css
+++ b/requirements/project/static/css/authentification.css
@@ -13,6 +13,7 @@ body {
     color: #eaeaea;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     width: 100vw;
     min-height: 100vh;
@@ -28,6 +29,7 @@ header {
     padding: 1.5rem 2rem;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     width: 100%;
+    height: 8vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -259,7 +261,7 @@ footer {
     bottom: 0;
     border-top: 1px solid rgba(255, 255, 255, 0.08);
     width: 100vw;
-    height: 10vh;
+    height: 8vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
