--- a/requirements/project/static/css/form.css
+++ b/requirements/project/static/css/form.css
@@ -19,6 +19,7 @@ body {
     min-height: 100vh;
     line-height: 1.6;
     gap: 15vh;
+    overflow-x: hidden;
 }
 
 
@@ -28,10 +29,10 @@ header {
     padding: 1.5rem 2rem;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     width: 100%;
+    height: 8vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: sticky;
     z-index: 1000;
 }
 
@@ -276,7 +277,7 @@ footer{
     bottom: 0;
     border-top: 1px solid rgba(255, 255, 255, 0.08);
     width: 100vw;
-    height: 10vh;
+    height: 8vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
