--- a/requirements/project/templates/post_component.html
+++ b/requirements/project/templates/post_component.html
@@ -41,7 +41,7 @@
 
 <form id="form_comment" action="/comment" method="POST">
   <input type="hidden" name="post_id" value="{{.Id}}">
-  <textarea id="comment" name="comment" placeholder="comment..." maxlength="500" required></textarea>
+  <textarea id="comment" name="comment" placeholder="comment..." minlength="1" maxlength="10000" required></textarea>
   <button type="submit">comment</button>
 </form>
 
