--- a/requirements/project/templates/profile.html
+++ b/requirements/project/templates/profile.html
@@ -12,7 +12,7 @@
 
     <header>
         <div id="project_header">
-            <h1><a href="/">FORUM</a></h1>
+            <h1><a href="/">Profile</a></h1>
         </div>
         <div class="profile-icon">
             <a href="/post" class="btn-primary">New Post</a>
