--- a/requirements/project/templates/index.html
+++ b/requirements/project/templates/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum</title>
     <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
@@ -50,18 +52,19 @@
             {{block "content" .Posts}}{{end}}
         </div>
     </main>
-    
+
 
     <div class="pagination">
         {{if .HasPrev}}
-        <a href="{{.PrevPage}}">◀</a>
+        <a href="{{.PrevPage}}"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
         {{end}}
         {{if .PrintCurrentPage}}
         Page {{.CurrentPage}}
         {{end}}
         {{if .HasNext}}
-        <a href="{{.NextPage}}">▶</a>
+        <a href="{{.NextPage}}"><i class="fa fa-chevron-right" aria-hidden="true"></i></a>
         {{end}}
+
     </div>
 
     <footer>
