fixing update error

--- a/requirements/project/templates/delete.html
+++ b/requirements/project/templates/delete.html
@@ -29,8 +29,8 @@
     {{end}}
     <div class="form-container">
         <form method="post"> <!-- TODO blocking enter press-->
-            <input type="password" name="password" id="password" placeholder="Enter Your Password"><br>
-            <button formaction="/profile">cancel</button>
+            <input type="password" name="password" id="password" placeholder="Enter Your Password" required><br>
+            <!-- <button formaction="/profile">cancel</button> -->
             <button formaction="/profile/delete/confirm">delete</button>
         </form>
     </div>
