--- a/requirements/project/templates/new_post.html
+++ b/requirements/project/templates/new_post.html
@@ -43,7 +43,7 @@
                     <label>
                         <input type="checkbox" name="Categories" value="{{$key}}">
                         {{$key}}
-                    </label><br>
+                    </label>
                     {{end}}
                 </fieldset>
             </div>
