--- a/requirements/project/templates/update.html
+++ b/requirements/project/templates/update.html
@@ -29,8 +29,8 @@
     {{if .username}}
     <!-- <div class="form-container"> -->
         <form class="" action="/profile/update/username/save" method="post">
-            <input type="text" id="username" name="username" placeholder="Please type your New Username" required><br><br>
-            <input type="password" id="current" name="current" placeholder="Please type your Password" required><br>
+            <input type="text" id="username" name="username" placeholder="Please type your New Username" required>
+            <input type="password" id="current" name="current" placeholder="Please type your Password" required>
             <button type="submit">Save</button>
         </form>
     <!-- </div> -->
@@ -38,8 +38,8 @@
     {{if .email}}
     <!-- <div class="form-container"> -->
         <form action="/profile/update/email/save" method="post">
-            <input type="text" id="email" name="email" placeholder="Please type your New Email " required><br><br>
-            <input type="password" id="current" name="current" placeholder="Please type your Password" required><br>
+            <input type="text" id="email" name="email" placeholder="Please type your New Email " required>
+            <input type="password" id="current" name="current" placeholder="Please type your Password" required>
             <button type="submit">Save</button>
         </form>
     </div>
@@ -47,9 +47,9 @@
     {{if .password}}
     <!-- <div class="form-container"> -->
         <form action="/profile/update/password/save" method="post">
-            <input type="password" id="current" name="current" minlength="8" maxlength="72" placeholder="Please type your Current Password" required><br>
-            <input type="password" id="new" name="new" minlength="8" maxlength="72" placeholder="Please type your New Password" required><br>
-            <input type="password" id="confirm" name="confirm" minlength="8" maxlength="72" placeholder="Please Confirm your New Password" required><br>
+            <input type="password" id="current" name="current" minlength="8" maxlength="72" placeholder="Please type your Current Password" required>
+            <input type="password" id="new" name="new" minlength="8" maxlength="72" placeholder="Please type your New Password" required>
+            <input type="password" id="confirm" name="confirm" minlength="8" maxlength="72" placeholder="Please Confirm your New Password" required>
             <button type="submit">Save</button>
         </form>
     <!-- </div> -->
