--- a/requirements/project/static/css/form.css
+++ b/requirements/project/static/css/form.css
@@ -282,6 +282,7 @@ footer {
     justify-content: center;
     align-items: center;
     margin-top: 2rem;
+    font-size: small;
 }
 
 /* Tablet styles */
