--- a/requirements/project/templates/login.html
+++ b/requirements/project/templates/login.html
@@ -15,21 +15,18 @@
         </div>
     </header>
 
-        {{if .Error}}
+    {{if .Error}}
     <div class="error-container">
         {{.Message}}
     </div>
     {{end}}
-
     <div class="form-container">
         <h1>Login</h1>
         <form action="/login" method="POST">
-            <!-- <div> -->
-                <input type="text" id="username" name="username" minlength="3" maxlength="254" placeholder="Username or Email" required>
-            <!-- </div>
-            <div> -->
-                <input type="password" id="password" name="password" minlength="6" maxlength="72" placeholder="Password" required>
-            <!-- </div> -->
+            <input type="text" id="username" name="username" minlength="3" maxlength="254"
+                placeholder="Username or Email" required>
+            <input type="password" id="password" name="password" minlength="6" maxlength="72" placeholder="Password"
+                required>
             <button type="submit">Login</button>
         </form>
         <p>Don't have an account? <a href="/register">Register here</a>.</p>
