new post handler

--- a/requirements/project/templates/delete.html
+++ b/requirements/project/templates/delete.html
@@ -15,7 +15,7 @@
         </div>
         <div class="container">
             <div class="profile-icon">
-                <a href="/post" class="btn-primary">New Post</a>
+                <a href="/newPost" class="btn-primary">New Post</a>
                 <a href="/profile">{{.Username}}</a>
                 <a href="/logout">Logout</a>
             </div>
