--- a/requirements/project/templates/index.html
+++ b/requirements/project/templates/index.html
@@ -36,7 +36,7 @@
         </script>
         <div class="profile-icon">
             {{if .Authenticated}}
-            <a href="/post" class="btn-primary">New Post</a>
+            <a href="/newPost" class="btn-primary">New Post</a>
             <a href="/profile">{{.Username}}</a>
             <a href="/logout">Logout</a>
             {{else}}
