--- a/requirements/project/templates/new_post.html
+++ b/requirements/project/templates/new_post.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/post.css">
+    <link rel="stylesheet" href="/static/css/newPost.css">
     <title>post</title>
 </head>
 
@@ -25,7 +25,7 @@
     {{end}}
     <div class="form-container">
         <h4>post</h4>
-        <form action="/post" method="POST">
+        <form action="/newPost" method="POST">
             <div>
                 <input type="text" id="title" name="title" placeholder="title..." minlength="1" maxlength="100" required>
             </div>
