--- a/requirements/project/templates/update.html
+++ b/requirements/project/templates/update.html
@@ -17,7 +17,7 @@
             <div class="profile-icon">
                 <a href="/profile">{{.Username}}</a>
                 <a href="/logout">Logout</a>
-                <a href="/post" class="btn-primary">New Post</a>
+                <a href="/newPost" class="btn-primary">New Post</a>
             </div>
         </div>
     </header>
