--- a/requirements/project/templates/profile.html
+++ b/requirements/project/templates/profile.html
@@ -14,7 +14,7 @@
             <h1><a href="/">FORUM</a></h1>
         </div>
         <div class="profile-icon">
-            <a href="/post" class="btn-primary">New Post</a>
+            <a href="/newPost" class="btn-primary">New Post</a>
             <a href="/logout">Logout</a>
         </div>
     </header>
