--- a/requirements/project/templates/register.html
+++ b/requirements/project/templates/register.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/authentification.css">
-    <title>Forum</title>
+    <link rel="icon" href="/static/svg/favicon.svg" type="image/svg">
+    <title>Register</title>
 </head>
 
 <body>
