--- a/requirements/project/templates/new_post.html
+++ b/requirements/project/templates/new_post.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/post.css">
-    <title>post</title>
+    <link rel="icon" href="/static/svg/favicon.svg" type="image/svg">
+    <title>Post</title>
 </head>
 
 <body>
