--- a/requirements/project/templates/post_component.html
+++ b/requirements/project/templates/post_component.html
@@ -1,4 +1,6 @@
 {{define "post_component"}}
+
+<a href="/post?id={{.Id}}" class="post_link">
 <div class="post">
 
   <div class="post_head" id="{{.Id}}">
@@ -64,3 +66,4 @@
 </footer>
 </div>
 {{end}}
+</a>
