saving 2025-06-11 add svg

--- a/requirements/project/templates/delete.html
+++ b/requirements/project/templates/delete.html
@@ -16,8 +16,11 @@
         </div>
         <div class="container">
             <div class="profile-icon">
-                <a href="/post" class="btn-primary">New Post</a>
-                <a href="/profile">{{.Username}}</a>
+                <a href="/newPost" class="btn-primary">New Post</a>
+                <div>
+                    <img src="/static/svg/circle-user-round.svg" alt="user profile">
+                    <a href="/profile">{{.Username}}</a>
+                </div>
                 <a href="/logout">Logout</a>
             </div>
         </div>
