--- a/requirements/project/templates/new_post.html
+++ b/requirements/project/templates/new_post.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/post.css">
+    <link rel="stylesheet" href="/static/css/new_post.css">
     <link rel="icon" href="/static/svg/favicon.svg" type="image/svg">
     <title>Post</title>
 </head>
@@ -26,7 +26,7 @@
     {{end}}
     <div class="form-container">
         <h4>post</h4>
-        <form action="/post" method="POST">
+        <form action="/newPost" method="POST">
             <div>
                 <input type="text" id="title" name="title" placeholder="title..." minlength="1" maxlength="100" required>
             </div>
