saving 2025-06-11 add post handler

--- a/requirements/project/templates/post_component.html
+++ b/requirements/project/templates/post_component.html
@@ -1,6 +1,6 @@
 {{define "post_component"}}
 <div class="container">
-  <a href="/newPost/{{.Id}}">
+  <a href="/post?Id={{.Id}}">
     <div class="post">
       <div class="post_head" id="{{.Id}}">
         <h2>{{.Title}}</h2>
